<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnknownAttribute -->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <ScrollView android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/relleno_de_detalle"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/margen_de_contenido"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/margen_de_contenido">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/ilUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:maxLength="16"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre"
                    android:inputType="textCapWords|textPersonName"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilSecreto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/secreto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/secreto"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilTeléfono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/teléfono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/teléfono"
                    android:inputType="phone"
                    android:maxLength="14"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilDirección"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/dirección"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dirección"
                    android:inputType="textMultiLine|textPostalAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilVerso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/verso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/verso"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilNavegador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView android:id="@+id/navegador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/navegador"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:id="@+id/ilUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText android:id="@+id/url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/url"
                    android:inputType="textUri"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
    <android.support.design.widget.FloatingActionButton android:id="@+id/fabAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/scrollView"
        app:layout_anchorGravity="bottom|end"
        android:src="@drawable/ic_action_aceptar"/>
</android.support.design.widget.CoordinatorLayout>